@@ -505,15 +505,13 @@ pp_iterator_functor<ContextT>::operator()()
     seen_newline = false;
     switch (static_cast<unsigned int>(id)) {
     case T_NONREPLACABLE_IDENTIFIER:
-        act_token.set_token_id(T_IDENTIFIER);
-        id = T_IDENTIFIER;
+        act_token.set_token_id(id = T_IDENTIFIER);
         break;
 
-    case T_GENERATEDNEWLINE:      // was generated by emit_line_directive()
-        act_token.set_token_id(T_NEWLINE);
+    case T_GENERATEDNEWLINE:  // was generated by emit_line_directive()
+        act_token.set_token_id(id = T_NEWLINE);
         ++iter_ctx->emitted_lines;
         seen_newline = true;
-        id = T_NEWLINE;
         break;
         
     case T_NEWLINE:
@@ -522,9 +520,13 @@ pp_iterator_functor<ContextT>::operator()()
         ++iter_ctx->emitted_lines;
         break;
 
-    case T_PP_NUMBER:
+    case T_CCOMMENT:          // will come here only if whitespace is preserved
+        iter_ctx->emitted_lines += 
+            context_policies::util::ccomment_count_newlines(act_token);
+        break;
+        
+    case T_PP_NUMBER:        // re-tokenize the pp-number
         {
-        // re-tokenize the pp-number
             token_sequence_type rescanned;
             
             std::string pp_number(act_token.get_value().c_str());
@@ -546,8 +548,7 @@ pp_iterator_functor<ContextT>::operator()()
         seen_newline = true;
         break;
 
-    default:
-        // make sure whitespace at line begin keeps seen_newline status
+    default:    // make sure whitespace at line begin keeps seen_newline status
         if (IS_CATEGORY(id, WhiteSpaceTokenType))
             seen_newline = skipped_newline;
         break;
@@ -815,6 +816,7 @@ token_id id = token_id(*iter_ctx->first);
         
     } while (T_PLACEHOLDER == id);
 
+    act_pos = act_token.get_position();
     return act_token;
 }
 
